tests/baselines/reference/APISample_jsdoc.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8921,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8921,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9181,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9181,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9531,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9531,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9555,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9555,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9642,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9642,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10807,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10807,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10818,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10818,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10828,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10828,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10903,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10903,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10960,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10960,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11014,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11014,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11034,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11034,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11044,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11044,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11078,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11078,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11081,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11081,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11085,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11085,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11103,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11103,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11129,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11132,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11132,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11144,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11144,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11208,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11208,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11219,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11219,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11243,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11243,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11251,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11251,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11255,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11255,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11328,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11328,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11515,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11515,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11517,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11517,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11521,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11521,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11523,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11525,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11538,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11538,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11540,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11540,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11542,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11542,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11544,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11544,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11546,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11546,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11548,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11548,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11550,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11550,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11552,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11552,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11554,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11554,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11556,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11556,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11558,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11558,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11560,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11560,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11562,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11562,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11564,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11564,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11566,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11566,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11664,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11664,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11666,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11666,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11668,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11668,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11670,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11670,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11746,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11746,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_jsdoc.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The original sources can be found
     *       at: https://github.com/YousefED/typescript-json-schema
     *           https://github.com/vega/ts-json-schema-generator
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import * as ts from "typescript";
    
    // excerpted from https://github.com/YousefED/typescript-json-schema
    // (converted from a method and modified; for example, `this: any` to compensate, among other changes)
    function parseCommentsIntoDefinition(this: any,
                                         symbol: ts.Symbol,
                                         definition: {description?: string, [s: string]: string | undefined},
                                         otherAnnotations: { [s: string]: true}): void {
        if (!symbol) {
            return;
        }
    
        // the comments for a symbol
        let comments = symbol.getDocumentationComment(undefined);
    
        if (comments.length) {
            definition.description = comments.map(comment => comment.kind === "lineBreak" ? comment.text : comment.text.trim().replace(/\r\n/g, "\n")).join("");
        }
    
        // jsdocs are separate from comments
        const jsdocs = symbol.getJsDocTags();
        jsdocs.forEach(doc => {
            // if we have @TJS-... annotations, we have to parse them
            const { name, text } = doc;
            if (this.userValidationKeywords[name]) {
                definition[name] = this.parseValue(text);
            } else {
                // special annotations
                otherAnnotations[doc.name] = true;
            }
        });
    }
    
    
    // excerpted from https://github.com/vega/ts-json-schema-generator
    export interface Annotations {
        [name: string]: any;
    }
    function getAnnotations(this: any, node: ts.Node): Annotations | undefined {
        const symbol: ts.Symbol = (node as any).symbol;
        if (!symbol) {
            return undefined;
        }
    
        const jsDocTags: ts.JSDocTagInfo[] = symbol.getJsDocTags();
        if (!jsDocTags || !jsDocTags.length) {
            return undefined;
        }
    
        const annotations: Annotations = jsDocTags.reduce((result: Annotations, jsDocTag: ts.JSDocTagInfo) => {
            const value = this.parseJsDocTag(jsDocTag);
            if (value !== undefined) {
                result[jsDocTag.name] = value;
            }
    
            return result;
        }, {});
        return Object.keys(annotations).length ? annotations : undefined;
    }
    
    // these examples are artificial and mostly nonsensical
    function parseSpecificTags(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.Parameter) {
            return ts.getJSDocParameterTags(node as ts.ParameterDeclaration);
        }
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            const func = node as ts.FunctionDeclaration;
            if (ts.hasJSDocParameterTags(func)) {
                const flat: ts.JSDocTag[] = [];
                for (const tags of func.parameters.map(ts.getJSDocParameterTags)) {
                    if (tags) flat.push(...tags);
                }
                return flat;
            }
        }
    }
    
    function getReturnTypeFromJSDoc(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            return ts.getJSDocReturnType(node);
        }
        let type = ts.getJSDocType(node);
        if (type && type.kind === ts.SyntaxKind.FunctionType) {
            return (type as ts.FunctionTypeNode).type;
        }
    }
    
    function getAllTags(node: ts.Node) {
        ts.getJSDocTags(node);
    }
    
    function getSomeOtherTags(node: ts.Node) {
        const tags: (ts.JSDocTag | undefined)[] = [];
        tags.push(ts.getJSDocAugmentsTag(node));
        tags.push(ts.getJSDocClassTag(node));
        tags.push(ts.getJSDocReturnTag(node));
        const type = ts.getJSDocTypeTag(node);
        if (type) {
            tags.push(type);
        }
        tags.push(ts.getJSDocTemplateTag(node));
        return tags;
    }
    